hkmc2/shared/src/test/mlscript/basics/FunDefs.mls


fun foo = 1

foo

fun (+) plus: Int

fun (+) : Int

1 + 2


fun f = g
fun g = f


fun (++)(x, y) = 1

1 ++ 2


fun (**) pow = 1

1 ** 2


fun (:::) appendAll[A](a, b): A = a + b


fun (>>) foo(a, b) = a * b

2 >> 2


:todo // error
fun ~ concat(a, b) = a + b
//│ /!!!\ Uncaught error: scala.MatchError: App(Ident(concat),Tup(List(Ident(a), Ident(b)))) (of class hkmc2.syntax.Tree$App)

:todo // error
fun not(b) = !b


